--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,5 @@ jobs:
     - run: npm install
     - run: npx webpack
     - run: test -f bundle.js && test -f dist/index.html && test -f dist/static.html && test -f dist/styles/styles.css
+    - run: md5sum -c hashes.md5
 
