--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npx webpack
-    - run: test -f bundle.js && test -f dist/index.html && test -f dist/static.html && test -f dist/styles/styles.css
+    - run: test -f dist/bundle.js && test -f dist/index.html && test -f dist/static.html && test -f dist/styles/styles.css
     - run: md5sum -c hashes.md5
 
