--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm install --save-dev webpack
+    - run: find dist -type f -exec md5sum {} +
     - run: md5sum -c hashes.md5
 
