--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "TS Project boiler plate",
   "main": "webpack.config.js",
   "dependencies": {
-    "copy-webpack-plugin": "^6.2.0",
-    "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3"
+    "copy-webpack-plugin": "^6.3.2",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.2.0"
   },
   "devDependencies": {},
   "scripts": {
